RESOLVED FIXED17737
ASSERTION FAILED: info.bmBitsPixel == 32
https://bugs.webkit.org/show_bug.cgi?id=17737
Summary ASSERTION FAILED: info.bmBitsPixel == 32
Matt Lilek
Reported 2008-03-09 21:43:17 PDT
On Windows, I'm hitting this assert resizing the window with the URL in a background tab. 1. Load <http://reddit.com> 2. Right click and open the URL in a new tab (""God did it!" may soon be an acceptable answer to questions on a Science test in Oklahoma if this bill passes.") 3. Resize the window a bit (I believe until the tab in the background would not need horizontal scrollbars if it were visible) ASSERT(info.bmBitsPixel == 32); http://trac.webkit.org/projects/webkit/browser/trunk/WebCore/platform/graphics/win/GraphicsContextCGWin.cpp#L48 According to the debugger, info.bmBitsPixel is actually 1. > WebKit.dll!WebCore::CGContextWithHDC(HDC__ * hdc=0xc4010892) Line 48 + 0x22 bytes C++ WebKit.dll!WebCore::GraphicsContext::GraphicsContext(HDC__ * hdc=0xc4010892) Line 66 + 0x52 bytes C++ WebKit.dll!WebView::paintIntoBackingStore(WebCore::FrameView * frameView=0x01dc01f0, HDC__ * bitmapDC=0xc4010892, const WebCore::IntRect & dirtyRect={...}) Line 905 C++ WebKit.dll!WebView::updateBackingStore(WebCore::FrameView * frameView=0x01dc01f0, HDC__ * dc=0xc4010892, bool backingStoreCompletelyDirty=false) Line 798 + 0x1d bytes C++ WebKit.dll!WebView::scrollBackingStore(WebCore::FrameView * frameView=0x01dc01f0, int dx=0, int dy=9, const WebCore::IntRect & scrollViewRect={...}, const WebCore::IntRect & clipRect={...}) Line 721 C++ WebKit.dll!WebChromeClient::scrollBackingStore(int dx=0, int dy=9, const WebCore::IntRect & scrollViewRect={...}, const WebCore::IntRect & clipRect={...}) Line 431 C++ WebKit.dll!WebCore::Chrome::scrollBackingStore(int dx=0, int dy=9, const WebCore::IntRect & scrollViewRect={...}, const WebCore::IntRect & clipRect={...}) Line 299 + 0x28 bytes C++ WebKit.dll!WebCore::ScrollView::scrollBackingStore(int dx=0, int dy=9, const WebCore::IntRect & scrollViewRect={...}, const WebCore::IntRect & clipRect={...}) Line 829 C++ WebKit.dll!WebCore::ScrollView::ScrollViewPrivate::scrollBackingStore(const WebCore::IntSize & scrollDelta={...}) Line 167 C++ WebKit.dll!WebCore::ScrollView::ScrollViewPrivate::valueChanged(WebCore::Scrollbar * bar=0x04e8da18) Line 150 C++ WebKit.dll!WebCore::Scrollbar::setValue(int v=637) Line 60 + 0x1e bytes C++ WebKit.dll!WebCore::ScrollView::updateScrollbars(const WebCore::IntSize & desiredOffset={...}) Line 560 C++ WebKit.dll!WebCore::ScrollView::resizeContents(int w=1049, int h=1349) Line 285 C++ WebKit.dll!WebCore::FrameView::adjustViewSize() Line 257 + 0x47 bytes C++ WebKit.dll!WebCore::FrameView::layout(bool allowSubtree=true) Line 492 C++ WebKit.dll!WebCore::FrameView::layoutIfNeededRecursive() Line 1091 C++ WebKit.dll!WebView::updateBackingStore(WebCore::FrameView * frameView=0x01dc01f0, HDC__ * dc=0x61010d94, bool backingStoreCompletelyDirty=true) Line 786 C++ WebKit.dll!WebView::paint(HDC__ * dc=0x00000000, long options=0) Line 853 C++ WebKit.dll!WebViewWndProc(HWND__ * hWnd=0x00100246, unsigned int message=15, unsigned int wParam=0, long lParam=0) Line 1615 C++ user32.dll!7e418734() [Frames below may be incorrect and/or missing, no symbols loaded for user32.dll]
Attachments
Patch (2.25 KB, patch)
2016-07-01 02:32 PDT, Per Arne Vollan
no flags
Patch (2.31 KB, patch)
2016-07-01 02:58 PDT, Per Arne Vollan
no flags
Patch (2.30 KB, patch)
2016-07-01 03:01 PDT, Per Arne Vollan
bfulgham: review+
Adam Roben (:aroben)
Comment 1 2008-03-10 13:09:12 PDT
I can't seem to reproduce this on ToT.
Per Arne Vollan
Comment 2 2016-07-01 02:32:27 PDT
Per Arne Vollan
Comment 3 2016-07-01 02:58:57 PDT
Per Arne Vollan
Comment 4 2016-07-01 03:01:43 PDT
Brent Fulgham
Comment 5 2016-07-01 09:30:31 PDT
Comment on attachment 282535 [details] Patch r=me
Per Arne Vollan
Comment 6 2016-07-01 10:29:12 PDT
(In reply to comment #5) > Comment on attachment 282535 [details] > Patch > > r=me Thank you!
Per Arne Vollan
Comment 7 2016-07-01 11:22:53 PDT
Brent Fulgham
Comment 8 2016-07-05 08:49:58 PDT
Note You need to log in before you can comment on or make changes to this bug.